# Bokf-ringsprogram

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  models.rs
src/api/: client.ts  types.ts
src/utils/: company.ts  money.ts
src/views/: Accounts.tsx  Dashboard.tsx  ExportView.tsx  NewVoucher.tsx  PeriodLocks.tsx  Reports.tsx  VoucherDetail.tsx  VouchersList.tsx
