[package]
name = "bokforingsprogram"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tauri = { version = "2.0.0", features = [] }
uuid = { version = "1.7", features = ["v4"] }

[build-dependencies]
tauri-build = "2.0.0"
